[package]
name = "mdshare"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["chrono", "runtime-tokio-rustls", "sqlite"] }
pulldown-cmark = "0.10"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
nanoid = "0.4.0"
clap = { version = "4.5.53", features = ["derive"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
chrono = { version = "0.4.42", features = ["serde"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
